# babelebab

./: .gitignore  README.md  pyproject.toml
docs/specs/: 0001-multilingual-wordlist-gapfill.md  0002-analyze-lexicon-stage.md  0003-lemmatization.md  0004-language-detection.md  0005-pipeline.md  0006-finish-splitter.md  0007-language-aware-segmentation.md
scripts/: build_wordlists.py  build_wordlists_leipzig.py  char_chunk.py  chunker.py
src/babelebab/: __init__.py  pipeline.py
src/babelebab/analyze/: __init__.py  core.py  lemmatize.py  lexicon.py  tokenize.py
src/babelebab/detect/: __init__.py  base.py  wordlist_detector.py
tests/: test_analyze.py  test_detect.py  test_golden_rules_en.py  test_lemmatize.py  test_pipeline.py  test_translate_hub.py
word-lists/: README.md
word-lists/ara/: ara_wordfreq_top5000.csv
word-lists/ben/: ben_wordfreq_top5000.csv
word-lists/deu/: deu_wordfreq_top5000.csv
word-lists/eng/: eng_wordfreq_top5000.csv
word-lists/fas/: fas_wordfreq_top5000.csv
word-lists/fra/: fra_wordfreq_top5000.csv
word-lists/hin/: hin_wordfreq_top5000.csv
word-lists/ita/: ita_wordfreq_top5000.csv
word-lists/jpn/: jpn_wordfreq_top5000.csv
word-lists/kor/: kor_wordfreq_top5000.csv
word-lists/por/: por_wordfreq_top5000.csv
word-lists/rus/: rus_wordfreq_top5000.csv
word-lists/spa/: spa_wordfreq_top5000.csv
word-lists/tam/: tam_wordfreq_top5000.csv
word-lists/tur/: tur_wordfreq_top5000.csv
word-lists/urd/: urd_wordfreq_top5000.csv
word-lists/vie/: vie_wordfreq_top5000.csv
word-lists/zho/: zho_wordfreq_top5000.csv
(+16 files in other folders)
